samples/_failures_safe/1761364138_e0eb57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f893a85.c: In function ‘main’:
./samples/SAFE/__tmp_1f893a85.c:126:13: error: expected declaration or statement at end of input
  126 |             for (int k = 0; k < cols; k++) {
      |             ^~~
./samples/SAFE/__tmp_1f893a85.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f893a85.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f893a85.c:126:13: error: expected declaration or statement at end of input
